--- a/localization/english/missions/zhongshan_missions_l_english.yml
+++ b/localization/english/missions/zhongshan_missions_l_english.yml
@@ -110,11 +110,11 @@
  me_zhongshan_9.a: "Yan is neutered."
 
  me_zhongshan_10_title: "$zhongshan_missions_task_10$"
- me_zhongshan_10_desc: ""
+ me_zhongshan_10_desc: "Our increasingly close affinity with our steppe heritage is bringing noteworthy benefits for our kingdom, my lord. We have sought out steppe allies and secured alliances with tribes who vow to come to our aid, and various clans from our newfound friends have committed to joining our armies outright. In addition, relearning the ways of the steppe has increased our horsemanship skills considerably, letting us strike the same fear into the hearts of our enemies in the #E Middle Kingdom#! as our ancestors once did."
  me_zhongshan_10.a: "Our steppe brothers will aid us!"
 
  me_zhongshan_11_title: "$zhongshan_missions_task_11$"
- me_zhongshan_11_desc: ""
+ me_zhongshan_11_desc: "[ROOT.GetCountry.GetRuler.GetName] waited impatiently for the unveiling of the recently commissioned silver-winged beast statues, eager to show off the artistic brilliance of the kingdom to [ROOT.GetCountry.GetName] citizens and foreign dignitaries alike. When the artists revealed the statues, they were a wonder to behold - two great silver Pixiu beasts, studded with gems and glorious feathered wings with a golden inlay. The crowd ignited in a rapture, and the foreigners whispered amongst themselves about how a supposedly backwards barbarian kingdom like [ROOT.GetCountry.GetName] could have the brilliance to unite Heaven and Earth in such a display."
  me_zhongshan_11.a: "Even Qi will marvel at this work of art!"
 
  me_zhongshan_12_title: "$zhongshan_missions_task_12$"
@@ -122,19 +122,19 @@
  me_zhongshan_12.a: "Revenge is sweet."
 
  me_zhongshan_13_title: "$zhongshan_missions_task_13$"
- me_zhongshan_13_desc: ""
+ me_zhongshan_13_desc: "With slaves and peasants laboring overtime in the tin and copper mines, an abundance of bronze has been able to be produced by our metalsmiths, o King [ROOT.GetCountry.GetRuler.GetName]! The finest and most pure bronze smelted was then used by our blacksmiths to create a beautiful and deadly sword to be used in traditional ceremonies and wielded by your highness in battle! Let this majestic battlepiece decorate our halls and slay the foes of [ROOT.GetCountry.GetName]."
  me_zhongshan_13.a: "Marvel at this wondrous sword!"
 
  me_zhongshan_14_title: "$zhongshan_missions_task_14$"
- me_zhongshan_14_desc: ""
+ me_zhongshan_14_desc: "Vast swathes of the northern plains and deserts has finally be claimed by [ROOT.GetCountry.GetName], thanks to the conquests and diplomacy of you my King [ROOT.GetCountry.GetRuler.GetName]! Our dominion over the peoples of #E Shuofang#! and #E Modong#! is only just beginning, as more tribesmen flock to our banner, swelling the size of our borders. Our new subjects demand we claim even more land from the disparate clansmen of the steppe, to further entrench the tribal customs and interests in the royal court at [GetProvince('(int32)8686').GetName] through demographic enhancement."
  me_zhongshan_14.a: "The northern tribesmen are under our domain."
 
  me_zhongshan_15_title: "$zhongshan_missions_task_15$"
- me_zhongshan_15_desc: ""
+ me_zhongshan_15_desc: "The conservative #E Ji#! ministers of the court begged King [ROOT.GetCountry.GetRuler.GetName] to reconsider, but the recent successes in the #E Di#! and #E Hu#! lands had already solidified our kings mind. Legions of tribesmen have joined our ranks, and the #E Baidi#! clans have been instrumental in bringing the world of the nomads to [GetProvince('(int32)8686').GetName]. The king and council have decided to steer [ROOT.GetCountry.GetName] away from the conniving ways of the #E Huaxia#!, and focus our energy on being faithful to our ancestors. The King shall dress as our ancestors did; by riding forth to exact tribute and instill terror in our enemies, and seeking to become to the undisputed #E Chanyu#! of nomadic peoples of the steppe."
  me_zhongshan_15.a: "We never truly forgot our ways..."
 
  me_zhongshan_16_title: "$zhongshan_missions_task_16$"
- me_zhongshan_16_desc: ""
+ me_zhongshan_16_desc: "My King [ROOT.GetCountry.GetRuler.GetName], we can now consider [ROOT.GetCountry.GetName] to be amongst the most powerful nations in the #E Middle Kingdom#! Our cities grow more prosperous as we become more influenced by the art and culture of the various #E Huaxia#! peoples, absorbing their philosphies, military tactics and approach to governance. The great metropolis of [GetProvince('(int32)8686').GetName] is the envy of all China, for this great cosmopolitan capital attracts artists and engineers from across the known world, as the tribal ways of the past are slowing fading into the distance. Let us move forward as an undoubtedly Chinese nation, and claim the rest of the #E Middle Kingdom#!, and with it, the title of #Y Son of Heaven#!, for you my dear King."
  me_zhongshan_16.a: "We shall rule the Middle Kingdom!"
 
  me_zhongshan_17_title: "$zhongshan_missions$"
