--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -96,56 +96,55 @@
  me_zhou_4_desc:0 "Over 600 years ago, the #E King Yuxiong of Chu#! submitted to the #E King Wen of Zhou#!, cementing a loyalty that was never to be disrupted... or so thought the #E Zhourites#!. The #E Chu#!, in the 9th century BCE, attacked via a vassal unto the #E Zhou#! territory. As #E King Zhao of Zhou#! retaliated, drawing the forces of the #E Six Armies of the West#!, disaster struck. The unfamiliar climate had utterly confounded #E Zhao#!, and as he retreated across the #E Han River#!, the bridge collapsed! In the end, #E King Zhao#! was killed, along with half of the royal forces. This humiliation and defeat was to spell the end of the zenith of #E Zhourite#! power. It lead to a decline that plagues the mind of the #E Zhou#! even to this day.\n\nAnd finally, after so many hundreds of years, we have enacted the punishment and revenge of #E King Zhao#!. The regions of The #E Chu#! will remember this as the end of their treacherous dominance of the #E Yu#! region, as well as the beginning of a pepriod of #E Chu#! decline in the wake of #E Zhou#! reborn authority."
  me_zhou_4.a:0 "An old tragedy, and new victory."
 
- me_zhou_5_title:0 "$zhou_missions_task_5$"
- me_zhou_5_desc:0 "" # do this event last, what happens is the assination and death of the king of wei.
- me_zhou_5.a:0 "No one will stand in our wei now!"
+ me_zhou_5_title: "$zhou_missions_task_5$"
+ me_zhou_5_desc: "It came as a shock to many that the King of Wei was struck down by an assassin, but when news of this foul deed reached the ears of [ROOT.GetCountry.GetRuler.GetName], the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] did not seem disturbed by the news.\n\nThe tale itself was grim. The King was slain in the streets of [GetCountry('WEI').GetCapital.GetName] by a masked assailant - a dagger to the throat ended the life of the Wei despot, and in the confusion, the attacker managed to slip away into the crowds.\n\nIf you wish, [ROOT.GetCountry.GetRuler.GetFirstName], we can post extra guards at your bedroom tonight - we do not want you to fear a similar fate." # do this event last, what happens is the assination and death of the king of wei.
+ me_zhou_5.a: "No one will stand in our wei now!"
  
- me_zhou_500_title:0 "Zheng Bian for Wei I" # zheng bian = coup d'etat. part 1 is the introduction to the history
- me_zhou_500_desc:0 "The #E Duke Hui of Wei#! was the first of the #E Jin#! states to claim themselves a King. After that, the former vassals of #E Zhou#! would become more and more independent. With our connections within the #E Wei#! state, along with a hefty sum of gold and many diplomatic favors, we will once again reign in the #E Wei#!, strip them of their self-proclaimed 'Kingdom' status, and returning to them vassalhood on the mighty #E Zhou#! state!"
- me_zhou_500.a:0 "No one must find out."
+ me_zhou_500_title: "Zheng Bian for Wei I" # zheng bian = coup d'etat. part 1 is the introduction to the history
+ me_zhou_500_desc: "The #E Duke Hui of Wei#! was the first of the #E Jin#! states to claim themselves a King. After that, the former vassals of #E Zhou#! would become more and more independent. With our connections within the #E Wei#! state, along with a hefty sum of gold and many diplomatic favors, we will once again reign in the #E Wei#!, strip them of their self-proclaimed 'Kingdom' status, and returning to them vassalhood on the mighty #E Zhou#! state!"
+ me_zhou_500.a: "No one must find out."
  
- me_zhou_501_title:0 "Zheng Bian for Wei II" # this event is for introducing a plot to assinate the king of wei
- me_zhou_501_desc:0 "A devious plot has been hatched by the minds of the #E Zhou#! and our friends in the #E Wei#! state. A coup d'état, or more aptly, a zheng bian. In exchange for helping our friend claim the throne of #E Wei#!, they will return to vassalhood under the mighty #E Zhou Dynasty#!. The first step of this zheng bian is to find an adequate candidate as well as an assassin to carry ou the deed. Luckily, we already have a candidate to take the throne who is interested in our cause."
- me_zhou_501.a:0 ""
+ me_zhou_501_title: "Zheng Bian for Wei II" # this event is for introducing a plot to assinate the king of wei
+ me_zhou_501_desc: "A devious plot has been hatched by the minds of the #E Zhou#! and our friends in the #E Wei#! state. A coup d'état, or more aptly, a zheng bian. In exchange for helping our friend claim the throne of #E Wei#!, they will return to vassalhood under the mighty #E Zhou Dynasty#!. The first step of this zheng bian is to find an adequate candidate as well as an assassin to carry out the deed. Luckily, we already have a candidate to take the throne who is interested in our cause."
+ me_zhou_501.a: "Inform me when this thing is finished"
  
- me_zhou_502_title:0 "" # part 3 can still be anything pretty much. nothing happens event wise, ig just to have more narrative freedom. the candidate portrait and the assination portrait are displayed in this event as well as the other 4 '500' events.
- me_zhou_502_desc:0 ""
- me_zhou_502.a:0 ""
+ me_zhou_502_title: "The Plot Thickens" # part 3 can still be anything pretty much. nothing happens event wise, ig just to have more narrative freedom. the candidate portrait and the assination portrait are displayed in this event as well as the other 4 '500' events.
+ me_zhou_502_desc: "[ROOT.GetCountry.GetRuler.GetName], we have received a note from our assassin - all is proceeding is according to design. The routes that are favored by the King of Wei have been studied, and a solid plan is beginning to coalesce. It shouldn't be long before everything is in place."
+ me_zhou_502.a: "Very well - tell me when something has happened!"
  
- me_zhou_503_title:0 "" # final event, and me_zhou_5 is the actual end, but this event should describe how the plan is about to be set in motion. event me_zhou_5 results in the death of the king of wei
- me_zhou_503_desc:0 ""
- me_zhou_503.a:0 ""
+ me_zhou_503_title: "No Turning Back From This Moment" # final event, and me_zhou_5 is the actual end, but this event should describe how the plan is about to be set in motion. event me_zhou_5 results in the death of the king of wei
+ me_zhou_503_desc: "[ROOT.GetCountry.GetRuler.GetName], the assassination attempt against the King of Wei is unfolding at this moment! There is no turning back now; either we will be successful or we shall fail, but there is no stopping what comes next."
+ me_zhou_503.a: "My heart is racing..."
 
- me_zhou_6_title:0 "$zhou_missions_task_6$" #final event, a challenger kills zhao for the throne, and this is the win event
- me_zhou_6_desc:0 ""
- me_zhou_6.a:0 ""
+ me_zhou_6_title: "$zhou_missions_task_6$" #final event, a challenger kills zhao for the throne, and this is the win event
+ me_zhou_6_desc: "The #E Zhou Champion#!'s sword slashed downward, and the #E King of Zhao#! slumped forward - moments later, his severed head fell to the ground. In a graceful motion, the Zhou warrior cleaned his blade before sheathing it, and turning towards [ROOT.GetCountry.GetRuler.GetName], bowed deeply and stepped forward. The King of Zhao was slain and the throne now belonged to [ROOT.GetCountry.GetRuler.GetFirstName] - our Champion has won the day!"
+ me_zhou_6.a: "Victory is ours! Glory to [ROOT.GetCountry.GetName]!"
  
- me_zhou_600_title:0 "" #someone with the zhou bloodline is selected as a champion in order to battle with the king of zhao
- me_zhou_600_desc:0 ""
- me_zhou_600.a:0 "" # normal fighting equipment
- me_zhou_600.b:0 "" # better fighting equipment (more money needed)
+ me_zhou_600_title: "A Zhou Champion" #someone with the zhou bloodline is selected as a champion in order to battle with the king of zhao
+ me_zhou_600_desc: "My [ROOT.GetCountry.GetRulerTitle], a champion from the courts of [ROOT.GetCountry.GetCapital.GetName], a warrior with the blood of the #E Zhou#!, has been selected for combat. Our hero shall stand against the perfidious King of Zhao, fighting for the glory of [ROOT.GetCountry.GetName] and for the throne of Zhao itself!\n\nIt has been suggested that your Majesty might be of some assistance when it comes to outfitting our warrior with weapons and armor."
+ me_zhou_600.a: "The normal fighting kit of a [ROOT.GetCountry.GetAdjective] soldier will suffice" # normal fighting equipment
+ me_zhou_600.b: "Open up the treasury to buy the best of everything" # better fighting equipment (more money needed)
  
- me_zhou_601_title:0 ""
- me_zhou_601_desc:0 "" # this one is about training. you can either spend 20 mil experience or 40. they also lead to diff events.
- me_zhou_601.a:0 "" # -20 mil exp
- me_zhou_601.b:0 "" # -40 mil exp
+ me_zhou_601_title: "Training For Battle"
+ me_zhou_601_desc: "Our Zhou champion is preparing for the duel and has been training outside the walls of [ROOT.GetCountry.GetCapital.GetName]. Every morning, [ROOT.GetCountry.GetRuler.GetName] watches the warrior from the city gates, secretly yearning to teach the swordsman a thing or two. A bold thought enters [ROOT.GetCountry.GetRuler.GetHerHis] mind, and an hour later, [ROOT.GetCountry.GetRuler.GetSheHe] is dressed in the robes of a peasant and standing next to the Zhou warrior, weapon in hand.\n\n'I have come to train with you, but you cannot tell anyone that I am here.'" # this one is about training. you can either spend 20 mil experience or 40. they also lead to diff events.
+ me_zhou_601.a: "We are going to master techniques unimagined" # -20 mil exp
+ me_zhou_601.b: "Train harder and longer than you ever have before" # -40 mil exp
  
- me_zhou_602_title:0 "" # this follows the less expensive mil exp one. it's also the fight itself. it's a random conclusion, so you could end it on a cliffhanger if you'd like. it will trigger either event 604 (loss) or 6 (win)
- me_zhou_602_desc:0 ""
- me_zhou_602.a:0 ""
- me_zhou_602.b:0 ""
+ me_zhou_602_title: "Too Close For Comfort" # this follows the less expensive mil exp one. it's also the fight itself. it's a random conclusion, so you could end it on a cliffhanger if you'd like. it will trigger either event 604 (loss) or 6 (win)
+ me_zhou_602_desc: "The battle between the #E Zhou Champion#! and the #E King of Zhao#! has been going on for ten minutes, and both combatants have been evenly matched thus far, trading blow for blow and neither managing to seize the upper hand. A small wad of fear has been steadily growing within the stomach of [ROOT.GetCountry.GetRuler.GetName], who is watching from the sidelines in a cold sweat. All eyes are on the two warriors, and as the King lunges forward with a primal scream, [ROOT.GetCountry.GetRuler.GetFirstName] groans aloud - this fight is too close to call."
+ me_zhou_602.a: "I can hardly stand to watch this!"
  
- me_zhou_603_title:0 "" # this follows the more expensive mil exp one. it's the fight itself and it's a guaranteed win. you could probs copy and paste 602 to this.
- me_zhou_603_desc:0 ""
- me_zhou_603.a:0 ""
+ me_zhou_603_title: "Pure Domination" # this follows the more expensive mil exp one. it's the fight itself and it's a guaranteed win. you could probs copy and paste 602 to this.
+ me_zhou_603_desc: "'Mercy!' screamed the King of Zhao as he fell to his knees, but the #E Zhou Champion#! was relentless and stepped forward with a look of grim determination on his face. [ROOT.GetCountry.GetRuler.GetName] was astonished by how quickly the Zhou swordsman had defeated the King of Zhao - the battle had hardly started before it was decisively finished."
+ me_zhou_603.a: "Finish him!"
  
- me_zhou_604_title:0 "" # this event is the loss event. the challenger loses the bid for the throne, but u still claim their provinces anyways at least
- me_zhou_604_desc:0 ""
- me_zhou_604.a:0 ""
+ me_zhou_604_title: "A Bitter Defeat" # this event is the loss event. the challenger loses the bid for the throne, but u still claim their provinces anyways at least
+ me_zhou_604_desc: "[ROOT.GetCountry.GetRuler.GetName] winced as he watched the #E King of Zhao#! disarm the #E Zhou Champion#!, but before anyone could say anything, the King plunged his blade through the chest of his combatant and sent the poor sod towards the ground. As he writhed in agony, the King turned towards [ROOT.GetCountry.GetRuler.GetFirstName], his face covered in blood and sweat, and sneered.\n\nBiting his cheek until blood was drawn, [ROOT.GetCountry.GetRuler.GetFirstName] clenched [ROOT.GetCountry.GetRuler.GetHerHis] fist and murmured quietly to [ROOT.GetCountry.GetRuler.GetHerHim]self."
+ me_zhou_604.a: "I will still have your lands one way or the other!"
  
- me_zhou_605_title:0 "" # this comes after the end of everything, a sort of epilogue written for the zhao state's perspective. this event triggers in zhao, not zhou, after the zhao are now ruled by someone with the zhou bloodline.
- me_zhou_605_desc:0 ""
- me_zhou_605.a:0 ""
+ me_zhou_605_title: "The Death Of The King" # this comes after the end of everything, a sort of epilogue written for the zhao state's perspective. this event triggers in zhao, not zhou, after the zhao are now ruled by someone with the zhou bloodline.
+ me_zhou_605_desc: "[ROOT.GetCountry.GetRuler.GetName], there is terrible news - the King of Zhao has been slain in battle by a #E Zhou Champion#!, and now the treacherous armies of the #E Zhou#! have claimed our country for themselves. Although it is bitter medicine to swallow, we must acknowledge that we have a new overlord."
+ me_zhou_605.a: "What choice in the matter do we have?"
 
  me_zhou_7_title:0 "$zhou_missions_task_7$"
  me_zhou_7_desc:0 "With the domination over the #E Song#! completed, we must move towards the region of #E Qing#! for our next plans to be set in motion. The #E Qing#! region was lost after the death of #E King You of Zhou#!. The #E Qi#! state rose and dominated much of this land. While it's a contested region, it shall soon return to imperial hands."
