Dian task loc, still needs events

--- a/localization/english/missions/dian_missions_l_english.yml
+++ b/localization/english/missions/dian_missions_l_english.yml
@@ -1,65 +1,65 @@
 ﻿l_english:
 
  dian_missions: "An Accidental Kingdom"
- dian_missions_DESCRIPTION: "Mission description" #We don't make mistakes - we just have happy little accidents
- dian_missions_CRITERIA_DESCRIPTION: "This mission will be completed when"
- dian_missions_BUTTON_TOOLTIP: ""
+ dian_missions_DESCRIPTION: "The great state of [ROOT.GetCountry.GetName] lay a round a large lake bearing the same name, in the mountains and valleys at the southeastern edge of #E Tibet#!. At the end of the 4th century BC, the people in #E Dian#! were renowned metalsmiths, crafting bronze, gold and silver artwork with influences from places such as [GetCountry('CHU').GetName] and [GetCountry('LCV').GetName]. However, an air of tension is rising in the idyllic kingdom at the edge of civilization, as the #E Warring States#! conflict rages on, and political developments in the #E Middle Kingdom#! are on the verge of boiling over into regions beyond their current grasp..." 
+ dian_missions_CRITERIA_DESCRIPTION: "This mission will be completed when [ROOT.GetCountry.GetName] conquers the tribal states surrounding it, embraces kingship and becomes a bridge between #E India#! and #E China#!. "
+ dian_missions_BUTTON_TOOLTIP: "We will find a way to thrive in this turmoil."
 
 #Missions
 
  dian_missions_task_1: "Conquer Kunming"
- dian_missions_task_1_DESC: ""
+ dian_missions_task_1_DESC: "The ever-present barbarian [GetCountry('TB2').GetName] tribes lay to our north, streaming down from #E Tibet#! in droves. For too long have their barbaric raids and cavalry tactics plagued our fields and murdered our innocent farming communities. The time has come to once and for all civilize the #E Kunming#! tribesmen, and absorb their strategic lands into our budding kingdom."
 
  dian_missions_task_2: "Eastern Tribes"
- dian_missions_task_2_DESC: ""
+ dian_missions_task_2_DESC: "The lesser lords of the #E Xinggu#! area to our east have long eluded the reach of our leader [ROOT.GetCountry.GetRuler.GetName]'s grasp. The various statelets are nothing but backwards barbarians not realizing the full potential of their lands. If we ever hope to protect ourselves from the domination of the northern #E Huaxia#! peoples, we must secure our eastern flank and incorporate the eastern peoples into our way of life."
 
  dian_missions_task_3: "Agriculture and Cattle"
- dian_missions_task_3_DESC: ""
+ dian_missions_task_3_DESC: "King [ROOT.GetCountry.GetRuler.GetName], our great state of [ROOT.GetCountry.GetName] has a burgeoning population, but our investment in the production of foodstuffs - whether through farming or herding - has not kept pace with the number of people in the capital. We should spend the money to improve our food security, lest the people find other ways to feed their hunger."
 
  dian_missions_task_4: "Zhuang Qiao"
- dian_missions_task_4_DESC: ""
+ dian_missions_task_4_DESC: "The turmoil within the #E Warring States#! to our north is now threatening to spill over into [ROOT.GetCountry.GetName], as political instability and war brought upon the nation of [GetCountry('CHU').GetName] has caused rogue bands of #E Chu#! peoples to begin showing up at our borders. The fate of our state may be determined by the events unfolding in the #E Middle Kingdom#!..."
 
  dian_missions_task_5: "Shove Shoumi"
- dian_missions_task_5_DESC: ""
+ dian_missions_task_5_DESC: "The peoples of the land of [GetCountry('SMI').GetName] share many of our cultural practices, and hold strategic lands just to our north, on the path to #E Sichuan#!. If we should happen to incorporate them, either by diplomacy or by force, then we will be a prime position to dominate the whole of the #E Nanzhong#! region."
 
  dian_missions_task_6: "To The Coast"
- dian_missions_task_6_DESC: ""
+ dian_missions_task_6_DESC: "The prosperous trade of the #Y Pearl River#! and Great Ocean lay just to our southeast, lord [ROOT.GetCountry.GetRuler.GetName]. While numerous barbarian peoples lay between [ROOT.GetCountry.GetName] and the coast, subduing these rowdy clans should be a simple task."
 
  dian_missions_task_7: "The Age Of Bronze"
- dian_missions_task_7_DESC: ""
+ dian_missions_task_7_DESC: "Bronzeware production has been a hallmark of [ROOT.GetCountry.GetName] for many generations, with ceremonial objects being used for rituals at court and exported abroad. Our metalsmiths require an expansion of the tin and copper mines, as well as new workshops, to meet the demands for our fine wares, and to produce objects worthy of your palace, lord [ROOT.GetCountry.GetRuler.GetName]."
 
  dian_missions_task_8: "Advanced Technology"
- dian_missions_task_8_DESC: ""
+ dian_missions_task_8_DESC: "Our increasing relation with the [GetCountry('CHU').GetName] peoples is beginning to show us just how much we have yet to learn, King [ROOT.GetCountry.GetRuler.GetName]. The #E Chu#! have teased but a few of their technological secrets to us, but if we are to control our own destiny, we must elevate #E Chu#! nobles to positions of power to persuade them to share their innovations with the Kingdom of [ROOT.GetCountry.GetName]."
 
- dian_missions_task_9: "Twice The Pride, Double The Fall" #see Yelang heritage, they were arrogant bastards who thougt that they are better than the Chinese emperor
- dian_missions_task_9_DESC: ""
+ dian_missions_task_9: "Twice The Pride, Double The Fall" 
+ dian_missions_task_9_DESC: "Our primary rival in the lands south of the #Y Yangtze River#!, the [GetCountry('YLG').GetName], has been a constant pain the rear end of King [ROOT.GetCountry.GetRuler.GetName], resisting cooperation and friendship at every turn. We should extinguish the arrogant upstarts once and for all, and sing tales of their demise."
 
  dian_missions_task_10: "We Need More Shells"
- dian_missions_task_10_DESC: ""
+ dian_missions_task_10_DESC: "Among the most lucrative trading networks along the coasts of the Great Ocean is that of the shells, particularly tortoiseshell and cowrie shells. Should [ROOT.GetCountry.GetName] claim the territories necessary to dominate this trade, the coffers of the imperial treasury will surely begin to overflow!"
 
  dian_missions_task_11: "Royal Tombs"
- dian_missions_task_11_DESC: ""
+ dian_missions_task_11_DESC: "While we have always venerated our ancestors, the style in which the #E Chu#! and other peoples of the #E Middle Kingdom#! adorn the tombs of their dead has left an impression on King [ROOT.GetCountry.GetRuler.GetName] and the noblemen of our kingdom. The ministers of [ROOT.GetCountry.GetName] have been instructed with investigating the costs of constructing such a royal tomb for our great late monarch."
 
  dian_missions_task_12: "To The Himalayas"
- dian_missions_task_12_DESC: ""
+ dian_missions_task_12_DESC: "While we have long dispensed with the threat of the #E Kunming#!, other #E Tibetan#! tribes at the eastern edge of the plateau, such as the [GetCountry('QIO').GetName] and [GetCountry('ZUO').GetName], continue to pillage our northern holdings, and present a viable path of invasion to our homeland around #Y Lake Dian#! by the #E Huaxia#! peoples. We must secure these lands, lest we always be in fear of barbarian raids and foreign invaders."
 
  dian_missions_task_13: "Chinese Embassy"
- dian_missions_task_13_DESC: ""
+ dian_missions_task_13_DESC: "As we have become more like the #E Chu#! since the events surrounding the arrival of #E Zhuang Qiao#!, the Kingdom of [ROOT.GetCountry.GetName] now has the potential to help shape and direct the political developments in the #E Middle Kingdom#! to its benefit. Should we decide to step into the ring against the #E Warring States#!, we must decide which states we should align ourselves with, as we cannot make enemies of everyone..."
 
  dian_missions_task_14: "Returning The Favor"
- dian_missions_task_14_DESC: ""
+ dian_missions_task_14_DESC: "While we have had time to reconcile with the invasion of #E Chu#! generals, we will not forget the transgressions against our venerable kingdom. The military strategists in the court of [ROOT.GetCountry.GetName] believe now is the time to return the favor to the [GetCountry('CHU').GetName]; we should strike forth into the #E Jing#! region south of the #Y Yangtze River#! and claim the vast lands for ourselves!"
 
  dian_missions_task_15: "New Capital"
- dian_missions_task_15_DESC: ""
+ dian_missions_task_15_DESC: "The Kingdom of [ROOT.GetCountry.GetName] has become a bastion of civilization in #E Nanzhong#!, o lord [ROOT.GetCountry.GetRuler.GetName]. But our capital at [GetProvince('(int32)8914').GetName] is becoming overcrowded with a lack of housing, and does not yet possess the architectural brilliance of the states of the #E Middle Kingdom#!. We should contruct new buildings and palatial estates to display our newfound wealth and glory to both subjects and foreign dignitaries alike."
 
  dian_missions_task_16: "Steppe Art"
- dian_missions_task_16_DESC: ""
+ dian_missions_task_16_DESC: "While our contact with the #E Chu#! and the #E Huaxia#! peoples as whole has had by far the greatest impact on our cultural development, we must not ignore the influence on the #E Rong#! horsemen on our society. Indeed, their mastery of equine arts and cavalry tactics have long fascinated the court at [ROOT.GetCountry.GetName], and King [ROOT.GetCountry.GetRuler.GetName] wishes to hire artists to mimic the great art styles of the #E Rong#! by commissioning the creation of new vessels for our reliquaries."
 
  dian_missions_task_17: "Highway to India"
- dian_missions_task_17_DESC: ""
+ dian_missions_task_17_DESC: "The road through the rough terrain and multitude of tribes to the lands of #E India#! will not be easy to secure, lord [ROOT.GetCountry.GetRuler.GetName]. #E Yongchang#!, while close in distance, is a difficult land to traverse and is inhabited by the [GetCountry('AIL').GetName]. Beyond them, the area of #E Pubu#! has seen throngs of #E Pyu#! peoples invade from #E Tibet#!, displacing and absorbing #E Pu#! peoples along the way. If we could somehow manage to tame these treacherous lands, however, the fabulous land trade routes from #E India#! to #E China#! will be ours to monopolize."
 
  dian_missions_task_18: "Royal Seal Of Dian"
- dian_missions_task_18_DESC: ""
+ dian_missions_task_18_DESC: "King [ROOT.GetCountry.GetRuler.GetName] wishes to fashion a new royal seal in the style of the great states of the #E Middle Kingdom#!. The royal council of [ROOT.GetCountry.GetName] has been tasked with discovering a way to fashion such an artifact, either through diplomatic acquisition from #E Chinese#! friends or finding a way to replicate their quality ourselves..."
 
 
  #Events 
@@ -173,7 +173,7 @@
  me_dian_18_desc: ""
  me_dian_18.a: ""
  
- me_dian_90_title: "Imminent Churite Invasion"
+ me_dian_90_title: "Imminent Chu Invasion"
  me_dian_90_desc: ""
  me_dian_90.a: ""
 
@@ -199,7 +199,7 @@
  dian_final_mod: "Royal Seal of Dian"
  highway_india_dian: "Highway to India"
  dian_embassy_zhou: "Embassy to Zhou"
- dian_embassy_zhao: "Embassy zo Zhao"
+ dian_embassy_zhao: "Embassy to Zhao"
  dian_embassy_qi: "Embassy to Qi"
  desc_dian_advanced_tech: "We are learning from the Chu migrants."
  desc_dian_agriculture: "Our agricultural sector is prospering."
