--- a/localization/english/missions/dian_missions_l_english.yml
+++ b/localization/english/missions/dian_missions_l_english.yml
@@ -65,15 +65,15 @@
  #Events 
  me_dian_1_title: "$dian_missions_task_1$"
  me_dian_1_desc: ""
- me_dian_1.a: ""
+ me_dian_1.a: "The Kunming will bow to us."
 
  me_dian_2_title: "$dian_missions_task_2$"
  me_dian_2_desc: ""
- me_dian_2.a: ""
+ me_dian_2.a: "The easterlands have been subjugated!"
 
  me_dian_3_title: "$dian_missions_task_3$"
  me_dian_3_desc: ""
- me_dian_3.a: ""
+ me_dian_3.a: "Our people will be well fed."
 
  me_dian_4_title: "$dian_missions_task_4$"
  me_dian_4_desc: ""
@@ -89,31 +89,31 @@
 
  me_dian_5_title: "$dian_missions_task_5$"
  me_dian_5_desc: ""
- me_dian_5.a: ""
+ me_dian_5.a: "The Shoumi kinfolk are now in our domain."
 
  me_dian_6_title: "$dian_missions_task_6$"
  me_dian_6_desc: ""
- me_dian_6.a: ""
+ me_dian_6.a: "We will become rich from coastal trade!"
 
  me_dian_7_title: "$dian_missions_task_7$"
  me_dian_7_desc: ""
- me_dian_7.a: ""
+ me_dian_7.a: "Our metalwork is second to none."
 
  me_dian_8_title: "$dian_missions_task_8$"
  me_dian_8_desc: ""
- me_dian_8.a: ""
+ me_dian_8.a: "We have learned much from the Chu."
 
  me_dian_9_title: "$dian_missions_task_9$"
  me_dian_9_desc: ""
- me_dian_9.a: ""
+ me_dian_9.a: "Yelang thinks too highly of itself."
 
  me_dian_10_title: "$dian_missions_task_10$"
  me_dian_10_desc: ""
- me_dian_10.a: ""
+ me_dian_10.a: "The booming shell trade will make us wealthy."
 
  me_dian_11_title: "$dian_missions_task_11$"
  me_dian_11_desc: ""
- me_dian_11.a: ""
+ me_dian_11.a: "The Royal Tombs are complete!"
  
  me_dian_1100_title: "$dian_missions_task_11$"
  me_dian_1100_desc: ""
@@ -121,7 +121,7 @@
 
  me_dian_12_title: "$dian_missions_task_12$"
  me_dian_12_desc: ""
- me_dian_12.a: ""
+ me_dian_12.a: "The northern passes are finally secure."
 
  me_dian_13_title: "$dian_missions_task_13$"
  me_dian_13_desc: ""
@@ -142,11 +142,11 @@
 
  me_dian_14_title: "$dian_missions_task_14$"
  me_dian_14_desc: ""
- me_dian_14.a: ""
+ me_dian_14.a: "Revenge is sweet."
 
  me_dian_15_title: "$dian_missions_task_15$"
  me_dian_15_desc: ""
- me_dian_15.a: ""
+ me_dian_15.a: "The new capital is a worthy seat for the Dian Kingdom."
 
  me_dian_16_title: "$dian_missions_task_16$"
  me_dian_16_desc: ""
@@ -154,7 +154,7 @@
  
  me_dian_1600_title: "$dian_missions_task_16$"
  me_dian_1600_desc: ""
- me_dian_1600.a: ""
+ me_dian_1600.a: "The new steppe-style vessels are divine."
 
  me_dian_17_title: "$dian_missions_task_17$"
  me_dian_17_desc: ""
@@ -171,11 +171,11 @@
 
  me_dian_18_title: "$dian_missions_task_18$"
  me_dian_18_desc: ""
- me_dian_18.a: ""
+ me_dian_18.a: "The Royal Seal will inspire awe and majesty in our court."
  
  me_dian_90_title: "Imminent Chu Invasion"
  me_dian_90_desc: ""
- me_dian_90.a: ""
+ me_dian_90.a: "This can't be good..."
 
  #Tooltips
  is_in_jing_region: "Is in Jing Region"
